Initialized API routes

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,8 +11,7 @@
         "ecmaVersion": 12
     },
     "rules": {
-
-        "no-unused-vars": 0
-
+        "no-unused-vars": 0,
+        "no-console": 0
     }
 }
