--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,17 +1,23 @@
 {
     "env": {
+        "browser": true,
         "commonjs": true,
         "es2021": true,
         "node": true
     },
     "extends": [
-        "airbnb-base"
+        "plugin:react/recommended",
+        "airbnb"
     ],
     "parserOptions": {
+        "ecmaFeatures": {
+            "jsx": true
+        },
         "ecmaVersion": 12
     },
+    "plugins": [
+        "react"
+    ],
     "rules": {
-        "no-unused-vars": 0,
-        "no-console": 0
     }
 }
